--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -1,1 +1,18 @@
-<h1>DBZ</h1>
+<h1>DBZ Personajes</h1>
+<hr>
+<div class="row">
+  <div class="col">
+
+    <app-dbz-list [characterList]="characters"></app-dbz-list>
+
+  </div>
+  <div class="col">
+
+
+    <app-dbz-add-character-form (onNewCharacter)="onNewCharacter($event)" ></app-dbz-add-character-form>
+
+
+
+  </div>
+
+</div>
