--- a/src/app/dbz/components/form/form.component.html
+++ b/src/app/dbz/components/form/form.component.html
@@ -11,7 +11,7 @@
       <input
       [(ngModel)]="character.power"
       name="power"
-      type="text"
+      type="number"
       placeholder="Poder"
       class="form-control mb-2">
 
@@ -21,5 +21,3 @@
         Agregar
       </button>
     </form>
-
-    <pre>{{character | json}} </pre>
