--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -6,15 +6,18 @@
       let isFirst = first;
       let isLast = last;
       "
-      class="list-group-item"
+      class="list-group-item d-flex justify-content-between align-items-center"
       [ngClass]="{'list-group-item-success': isLast,
     'list-group-item-primary':isFirst}">
+    <div>
 
-        <span class="text-primary">{{ i + 1 }}.-</span>
+      <span class="text-primary">{{ i + 1 }}.-</span>
+      <span>{{character.name}} -</span>
+      <strong>power: {{character.power}} - </strong>
+      <span>{{character.id}}</span>
 
-        <span>{{character.name}} -</span>
-
-        <strong>power: {{character.power}}</strong>
+    </div>
+    <button class="btn btn-danger mx-2" (click)="emitDelete(i)">x</button>
 
       </li>
     </ul>
