--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -17,7 +17,7 @@
       <span>{{character.id}}</span>
 
     </div>
-    <button class="btn btn-danger mx-2" (click)="emitDelete(i)">x</button>
+    <button class="btn btn-danger mx-2" (click)="emitDelete(character.id)">x</button>
 
       </li>
     </ul>
