--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,15 +3,10 @@
 <div class="row">
   <div class="col">
 
-    <app-dbz-list [characterList]="dbzService.characters" (onDeleteCharacter)="dbzService.onDeleteCharacter($event)"></app-dbz-list>
-
+    <app-dbz-list [characterList]="characters" (onDeleteCharacter)="deleteCharacterById($event)"></app-dbz-list>
   </div>
   <div class="col">
-
-
-    <app-dbz-add-character-form (onNewCharacter)="dbzService.onNewCharacter($event)" ></app-dbz-add-character-form>
-
-
+    <app-dbz-add-character-form (onNewCharacter)="onNewCharacter($event)" ></app-dbz-add-character-form>
 
   </div>
 
